SET(CMAKE_CXX_COMPILER /usr/bin/g++-11)
SET(CMAKE_C_COMPILER /usr/bin/gcc-11)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True) 

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra")
ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Release")
SET(CMAKE_CXX_FLAGS "-O2")
ENDIF()

#SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra")
SET(CMAKE_LINKER_FLAGS "-pthread")

INCLUDE_DIRECTORIES(${BLAZE_INCLUDE_DIRS}) 
INCLUDE_DIRECTORIES(${BOOST_INCLUDEDIR})
INCLUDE_DIRECTORIES(${NLOHMANN_JSON_INCL_DIR}) 
INCLUDE_DIRECTORIES(${TORCH_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include) 
INCLUDE_DIRECTORIES(${RLENVS_CPP_INCLUDE_DIRS})

# libraries to link against this should be conditional
# to the specified configuration
# see also: # see https://cmake.org/cmake/help/latest/command/link_directories.html
LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
LINK_DIRECTORIES(${RLENVS_CPP_LIB_PATH})

 

ADD_SUBDIRECTORY(rl)
#ADD_SUBDIRECTORY(ml)


#ADD_SUBDIRECTORY(example_0)
#ADD_SUBDIRECTORY(example_1)
#ADD_SUBDIRECTORY(example_2)
#ADD_SUBDIRECTORY(example_3)
#ADD_SUBDIRECTORY(example_6)
#ADD_SUBDIRECTORY(example_7)
#ADD_SUBDIRECTORY(example_8)
#ADD_SUBDIRECTORY(example_9)
#ADD_SUBDIRECTORY(example_10)
#ADD_SUBDIRECTORY(example_11)
#ADD_SUBDIRECTORY(example_12)
#ADD_SUBDIRECTORY(example_13)
#ADD_SUBDIRECTORY(example_14)
#ADD_SUBDIRECTORY(example_15)
#ADD_SUBDIRECTORY(example_16)
#ADD_SUBDIRECTORY(example_17)
#ADD_SUBDIRECTORY(example_18)
#ADD_SUBDIRECTORY(example_21)
#ADD_SUBDIRECTORY(example_22)
