SET(CMAKE_CXX_COMPILER /usr/bin/g++-11)
SET(CMAKE_C_COMPILER /usr/bin/gcc-11)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True) 

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra")
ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Release")
    SET(CMAKE_CXX_FLAGS "-O2")
ENDIF()

#SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra")
SET(CMAKE_LINKER_FLAGS "-pthread")

INCLUDE_DIRECTORIES(${BOOST_INCLUDEDIR})
INCLUDE_DIRECTORIES(${NLOHMANN_JSON_INCL_DIR})

IF( USE_PYTORCH )
    INCLUDE_DIRECTORIES(${TORCH_INCLUDE_DIRS})
ENDIF()

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include) 

IF(USE_RLENVS_CPP)
    INCLUDE_DIRECTORIES(${RLENVS_CPP_INCLUDE_DIRS})
ENDIF()

# libraries to link against this should be conditional
# to the specified configuration
# see also: # see https://cmake.org/cmake/help/latest/command/link_directories.html
LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})


IF( USE_PYTORCH )
    LINK_DIRECTORIES("/home/alex/MySoftware/libtorch/lib")
ENDIF()

IF(USE_RLENVS_CPP)
    LINK_DIRECTORIES(${RLENVS_CPP_LIB_PATH})
ENDIF()
 
ADD_SUBDIRECTORY(intro)
ADD_SUBDIRECTORY(rl)
#ADD_SUBDIRECTORY(ml)
