SET(CMAKE_CXX_COMPILER /usr/bin/g++-11)
SET(CMAKE_C_COMPILER /usr/bin/gcc-11)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True) 

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra")
ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Release")
    SET(CMAKE_CXX_FLAGS "-O2")
ENDIF()

#SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra")
SET(CMAKE_LINKER_FLAGS "-pthread")

INCLUDE_DIRECTORIES(${BOOST_INCLUDEDIR})
INCLUDE_DIRECTORIES(${NLOHMANN_JSON_INCL_DIR})
INCLUDE_DIRECTORIES(${BITRL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include) 

IF( USE_PYTORCH )
    INCLUDE_DIRECTORIES(${TORCH_INCLUDE_DIRS})
ENDIF()

# libraries to link against this should be conditional
# to the specified configuration
# see also: # see https://cmake.org/cmake/help/latest/command/link_directories.html
LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
LINK_DIRECTORIES(${BITRL_LIB_PATH})

IF( USE_PYTORCH )
    LINK_DIRECTORIES("/home/alex/MySoftware/libtorch/lib")
ENDIF()

ADD_SUBDIRECTORY(intro)
ADD_SUBDIRECTORY(rl)
ADD_SUBDIRECTORY(filtering)
ADD_SUBDIRECTORY(path_tracking)



