SET(CMAKE_CXX_COMPILER /usr/bin/g++-11)
SET(CMAKE_C_COMPILER /usr/bin/gcc-10)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True) 

SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra")
SET(CMAKE_LINKER_FLAGS "-pthread")

IF(GTEST_INCLUDE_DIRS MATCHES " ")

	# find gtest
	FIND_PACKAGE(GTest REQUIRED)

	IF(GTest_FOUND)

		INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
		LINK_DIRECTORIES(${GTEST_BOTH_LIBRARIES})
	ENDIF()

ELSE()
	INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
	LINK_DIRECTORIES(${GTEST_BOTH_LIBRARIES})
ENDIF()

# use the Boost link directories
LINK_DIRECTORIES(${Boost_LIBRARY_DIR})
LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX})
LINK_DIRECTORIES(${PYTHON_CONFIG_LIBS_PATH})

# add the test dirs
ADD_SUBDIRECTORY(test_array_utils)
ADD_SUBDIRECTORY(test_mc_tree_search)
