SET(CMAKE_CXX_COMPILER /usr/bin/g++-11)
SET(CMAKE_C_COMPILER /usr/bin/gcc-11)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True) 

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra")
ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Release")
SET(CMAKE_CXX_FLAGS "-O2")
ENDIF()

#SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra")
SET(CMAKE_LINKER_FLAGS "-pthread")

IF(GTEST_INCLUDE_DIRS MATCHES " ")

	# find gtest
	FIND_PACKAGE(GTest REQUIRED)

	IF(GTest_FOUND)

		INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
		LINK_DIRECTORIES(${GTEST_BOTH_LIBRARIES})
	ENDIF()

ELSE()
	INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
	LINK_DIRECTORIES(${GTEST_BOTH_LIBRARIES})
ENDIF()

INCLUDE_DIRECTORIES(${GYMFCPP_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BLAZE_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BOOST_INCLUDEDIR})
INCLUDE_DIRECTORIES(${NLOHMANN_JSON_INCL_DIR})
INCLUDE_DIRECTORIES(${TORCH_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${GYMFCPP_INCLUDE_DIRS})

LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
LINK_DIRECTORIES(${GYMFCPP_LIB_DIRS})
LINK_DIRECTORIES(${PYTHON_CONFIG_LIBS_PATH})

# add the test dirs
ADD_SUBDIRECTORY(test_array_utils)
#ADD_SUBDIRECTORY(test_mc_tree_search)
#ADD_SUBDIRECTORY(test_kd_tree)
ADD_SUBDIRECTORY(test_basic_stats)
ADD_SUBDIRECTORY(test_iteration_counter)
ADD_SUBDIRECTORY(test_fixed_priority_queue)
ADD_SUBDIRECTORY(test_a2c)
ADD_SUBDIRECTORY(test_experience_buffer)
