cmake_minimum_required(VERSION 3.6 FATAL_ERROR)

SET(EXECUTABLE  example_17)
SET(SOURCE ${EXECUTABLE}.cpp)

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} cubeailib)
TARGET_LINK_LIBRARIES(${EXECUTABLE} ${TORCH_LIBRARIES})
TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)
TARGET_LINK_LIBRARIES(${EXECUTABLE} openblas)
TARGET_LINK_LIBRARIES(${EXECUTABLE} gymfcpplib)
TARGET_LINK_LIBRARIES(${EXECUTABLE} python3.8)
TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_python38)
TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_system)
TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_numpy38)
