CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

SET(EXECUTABLE  test_array_utils)
SET(SOURCE ${EXECUTABLE}.cpp)

#SET(CMAKE_CXX_COMPILER /usr/bin/g++-10)
#SET(CMAKE_C_COMPILER /usr/bin/gcc-10)
#SET(CMAKE_CXX_STANDARD 20)
#SET(CMAKE_CXX_STANDARD_REQUIRED True) 

#SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra")
#SET(CMAKE_LINKER_FLAGS "-pthread")

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} cubeailib)

IF( USE_PYTORCH )
TARGET_LINK_LIBRARIES(${EXECUTABLE} ${TORCH_LIBRARIES})
ENDIF()

TARGET_LINK_LIBRARIES(${EXECUTABLE} gtest)
TARGET_LINK_LIBRARIES(${EXECUTABLE} gtest_main) # so that tests dont need to have a main
TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)

