CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

SET(EXECUTABLE  test_iteration_counter)
SET(SOURCE ${EXECUTABLE}.cpp)

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} cubeailib)

IF( USE_PYTORCH )
TARGET_LINK_LIBRARIES(${EXECUTABLE} ${TORCH_LIBRARIES})
ENDIF()

TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_system)
TARGET_LINK_LIBRARIES(${EXECUTABLE} gtest)
TARGET_LINK_LIBRARIES(${EXECUTABLE} gtest_main) # so that tests dont need to have a main
TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)

