cmake_minimum_required(VERSION 3.6 FATAL_ERROR)

SET(EXECUTABLE  intro_example_2)
SET(SOURCE ${EXECUTABLE}.cpp)

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} cubeailib)

IF( USE_PYTORCH )
    TARGET_LINK_LIBRARIES(${EXECUTABLE} ${TORCH_LIBRARIES})
ENDIF()

TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)
TARGET_LINK_LIBRARIES(${EXECUTABLE} openblas)
target_link_libraries(${EXECUTABLE} tbb)
target_link_libraries(${EXECUTABLE} boost_log)
