CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

SET(EXECUTABLE  rl_example_12)
SET(SOURCE ${EXECUTABLE}.cpp)

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE cubeailib bitrllib pthread openblas tbb boost_log)



IF(USE_MQTT)
    TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE paho-mqttpp3 paho-mqtt3as)
ENDIF ()

IF(USE_OPENCV)
    TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE ${OpenCV_LIBS})
ENDIF ()

IF( USE_PYTORCH )
    TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE ${TORCH_LIBRARIES})
ENDIF()

IF(ENABLE_WEBOTS_FLAG)
    TARGET_LINK_LIBRARIES(${EXECUTABLE} PRIVATE CppController)
ENDIF()


