CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

SET(EXECUTABLE  rl_example_18)
SET(SOURCE ${EXECUTABLE}.cpp)

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} cubeailib)

IF(USE_PYTORCH)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} ${TORCH_LIBRARIES})
ENDIF()

TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)
TARGET_LINK_LIBRARIES(${EXECUTABLE} openblas)

IF(USE_GYMFCPP)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} gymfcpplib)
ENDIF()



TARGET_LINK_LIBRARIES(${EXECUTABLE} python3.10)
TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_python310)
TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_system)
