cmake_minimum_required(VERSION 3.6 FATAL_ERROR)

SET(EXECUTABLE  rl_example_19)
SET(SOURCE ${EXECUTABLE}.cpp)

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} cubeailib)
TARGET_LINK_LIBRARIES(${EXECUTABLE} rlenvscpplib)

IF( USE_PYTORCH )
    TARGET_LINK_LIBRARIES(${EXECUTABLE} ${TORCH_LIBRARIES})
ENDIF()

IF(ENABLE_WEBOTS_FLAG)
	TARGET_LINK_LIBRARIES(${EXECUTABLE} CppController)
ENDIF()

TARGET_LINK_LIBRARIES(${EXECUTABLE} pthread)
TARGET_LINK_LIBRARIES(${EXECUTABLE} openblas)
target_link_libraries(${EXECUTABLE} tbb)
target_link_libraries(${EXECUTABLE} boost_log)

